--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
       box-shadow:0 4px 6px rgba(0,0,0,0.1);
     }
 
+    /* 按钮样式 */
     .btn {
       display:inline-block;
       padding:12px 20px;
@@ -80,6 +81,23 @@
       margin-top:15px;
     }
     .btn:hover { background:#228B22; }
+
+    /* 悬浮按钮样式 */
+    .floating-btn {
+      position:fixed;
+      bottom:20px;
+      right:20px;
+      background:#006400;
+      color:white;
+      padding:15px 18px;
+      border-radius:50px;
+      font-weight:bold;
+      box-shadow:0 4px 8px rgba(0,0,0,0.2);
+      z-index:2000;
+      text-decoration:none;
+      font-size:14px;
+    }
+    .floating-btn:hover { background:#228B22; }
 
     @media (max-width: 768px) {
       nav a { display:inline-block; margin:6px; }
@@ -108,14 +126,6 @@
       <a href="#contact">Contact</a>
     </nav>
   </header>
-
-  <!-- 顶部地图按钮 -->
-  <div style="text-align:center; padding:15px; background:#f5f5f5;">
-    <a href="https://www.google.com/maps/dir/?api=1&destination=T%26D+Auto+Care" 
-       target="_blank" class="btn">
-      📍 Get Directions
-    </a>
-  </div>
 
   <!-- Home Section -->
   <div id="home" class="hero">
@@ -170,5 +180,11 @@
   <footer>
     <p>© 2025 T&D Auto Care. All Rights Reserved.</p>
   </footer>
+
+  <!-- 悬浮地图按钮 -->
+  <a href="https://www.google.com/maps/dir/?api=1&destination=T%26D+Auto+Care" 
+     target="_blank" class="floating-btn">
+    📍 Get Directions
+  </a>
 </body>
 </html>
