--- a/index.html
+++ b/index.html
@@ -24,10 +24,6 @@
       z-index:1000; 
     }
 
-    nav { margin-top:10px; }
-    nav a { color:white; margin:0 12px; text-decoration:none; font-weight:bold; }
-    nav a:hover { text-decoration:underline; color:#90EE90; }
-
     .hero { 
       background:#2e8b57 url('https://picsum.photos/1200/500?car') no-repeat center/cover; 
       color:white; 
@@ -100,7 +96,6 @@
     .floating-btn:hover { background:#228B22; }
 
     @media (max-width: 768px) {
-      nav a { display:inline-block; margin:6px; }
       .hero { padding:60px 15px; }
       .hero h2 { font-size:1.6em; }
       .section { padding:40px 15px; }
@@ -109,7 +104,6 @@
     }
 
     @media (max-width: 480px) {
-      nav { font-size:14px; }
       .hero h2 { font-size:1.3em; }
       .card { padding:15px; }
     }
@@ -119,12 +113,6 @@
   <!-- Header -->
   <header>
     <h1>T&D Auto Care</h1>
-    <nav>
-      <a href="#home">Home</a>
-      <a href="#services">Services</a>
-      <a href="#about">About</a>
-      <a href="#contact">Contact</a>
-    </nav>
   </header>
 
   <!-- Home Section -->
@@ -171,8 +159,8 @@
   <div id="contact" class="section">
     <h2>Contact Us</h2>
     <p>📍 T&D Auto Care</p>
-    <p>📞 0412 345 678</p>
-    <p>✉️ tdautocare@email.com</p>
+    <p>📞 0430790814</p>
+    <p>✉️ tndautocare@gmail.com</p>
     <p>⏰ Mon–Sat: 9am–6pm</p>
   </div>
 
