--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@
     <p>📍 T&D Auto Care</p>
     <p>📞 0430790814</p>
     <p>✉️ tndautocare@gmail.com</p>
-    <p>⏰ Sun: Closed
-          Mon~ Fri: 09:00 – 17:00
-          Sat: 09:00 – 14:00</p>
+    <p>⏰ Sun: Closed</p>
+    <p>Mon~ Fri: 09:00 – 17:00</p>
+    <p>Sat: 09:00 – 14:00</p>
   </div>
 
   <!-- Footer -->
